sfdx-source/force-app/main/default/objects/Project__c/fields/SP_Ground__c.field-meta.xml
<CustomField>
    <fullName>SP_Ground__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SP Ground</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (SP Ground)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>