sfdx-source/force-app/main/default/objects/Project__c/fields/SP_Power__c.field-meta.xml
<CustomField>
    <fullName>SP_Power__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SP Power</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (SP Power)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>