sfdx-source/force-app/main/default/objects/Project__c/fields/SP_Tower__c.field-meta.xml
<CustomField>
    <fullName>SP_Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SP Tower</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>