sfdx-source/force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SP_Tower__c</columns>
    <columns>SP_Power__c</columns>
    <columns>SP_Ground__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>